# PySide6-project-template

./: .gitignore  Justfile  LICENSE  Makefile  README.MD  README.md  main.py  org.github.trin94.pyside6.template.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml
build-aux/: generate-lupdate-project-file.py  generate-pyproject-file.py  generate-qrc-file.py  generate-qt-creator-project-file.py  test_update_pyproject_file.py  update_pyproject_file.py
build-aux/linux/: Justfile  README.MD  flatpak-pypi-checker.py  org.github.trin94.pyside6.template.desktop  org.github.trin94.pyside6.template.metainfo.xml  org.github.trin94.pyside6.template.yml
build-aux/windows/: README.MD
data/: qtquickcontrols2.conf
docs/: dev-setup-linux.md  dev-setup-windows.md  internationalization.md
docs/developer/: README.MD  adding-new-languages.md  dev-setup-linux.md  dev-setup-windows.md  internationalization.md  setup-on-linux.md  setup-on-windows.md
i18n/: de-DE.ts  de.ts  de_DE.ts  he-IL.ts  he.ts  he_IL.ts
myapp/: __init__.py  application.py  injections.py  startup.py
myapp/framelesswindow/linux/: __init__.py  event.py
myapp/framelesswindow/win/: __init__.py  c_structures.py  effect.py  event.py
myapp/pyobjects/: __init__.py  clipboard.py  example_singleton.py  translation.py
myapp/services/: __init__.py  translation.py
qml/: main.qml
qml/app/: MyAppMainPage.qml  qmldir
qml/components/: MyAppMainPage.qml  qmldir
qml/components/header/: MyAppHeader.qml  MyAppHeaderContent.qml  MyAppHelpMenu.qml  MyAppMenu1.qml  MyAppMenu2.qml  MyAppOptionsMenu.qml  MyAppWindowCloseButton.qml  MyAppWindowMaximizeButton.qml  MyAppWindowMinimizeButton.qml  qmldir
qml/components/shared/: MyAppAutoWidthMenu.qml
qml/handlers/: MyAppWindowBorderMouseCurser.qml  MyAppWindowResizeHandler.qml  qmldir
qml/header/: MyAppHeader.qml  MyAppHeaderContent.qml  MyAppHelpMenu.qml  MyAppMenu1.qml  MyAppMenu2.qml  MyAppOptionsMenu.qml  MyAppWindowCloseButton.qml  MyAppWindowMaximizeButton.qml  MyAppWindowMinimizeButton.qml  qmldir
qml/models/: MyAppLanguageModel.qml  qmldir  tst_MyAppLanguageModel.qml
qml/shared/: MyAppAutoWidthMenu.qml  qmldir
qt/qml/: main.qml
qt/qml/app/: MyAppMainPage.qml  qmldir
qt/qml/header/: MyAppHeader.qml  MyAppHeaderContent.qml  MyAppHelpMenu.qml  MyAppMenu1.qml  MyAppMenu2.qml  MyAppOptionsMenu.qml  qmldir
qt/qml/models/: MyAppLanguageModel.qml  qmldir  tst_MyAppLanguageModel.qml
qt/qml/shared/: MyAppAutoWidthMenu.qml  qmldir
qt/qml/views/: MyAppHeaderView.qml  MyAppMainView.qml  qmldir
src/: application.py  startup.py
src/framelesswindow/: __init__.py
src/framelesswindow/linux/: __init__.py  event.py
src/framelesswindow/win/: __init__.py  c_structures.py  effect.py  event.py
src/pyobjects/: __init__.py  example_singleton.py
src/viewmodels/: __init__.py  header.py  main.py
test/: __init__.py  prepare_qml.py
test/services/: __init__.py  test_resource_availability.py  test_translation.py
