[project]
name = "PySide6-project-template"
version = "0.1.0"
description = "An unofficial and opinionated project template designed for a quick start with PySide6 and QtQuick."
readme = "README.MD"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Private :: Do Not Upload",
]
dependencies = [
    "pyside6-essentials==6.10.0",
    "pywin32>=311; sys_platform == 'win32'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[project.urls]
Homepage = "https://github.com/trin94/PySide6-project-template"
Repository = "https://github.com/trin94/PySide6-project-template"
Issues = "https://github.com/trin94/PySide6-project-template/issues"

[tool.pyside6-project]
files = [
    # WARNING! This list is auto updated by the just build helper
    "data/app-icon.svg",
    "data/icons/close_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/close_fullscreen_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/minimize_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/icons/open_in_full_24dp_1F1F1F_FILL0_wght400_GRAD0_opsz24.svg",
    "data/qtquickcontrols2.conf",
    "i18n/de-DE.ts",
    "i18n/he-IL.ts",
    "main.py",
    "project.qrc",
    "qt/qml/app/MyAppMainPage.qml",
    "qt/qml/app/qmldir",
    "qt/qml/main.qml",
    "qt/qml/models/MyAppLanguageModel.qml",
    "qt/qml/models/qmldir",
    "qt/qml/models/tst_MyAppLanguageModel.qml",
    "qt/qml/shared/MyAppAutoWidthMenu.qml",
    "qt/qml/shared/qmldir",
    "qt/qml/views/MyAppHeaderView.qml",
    "src/__init__.py",
    "src/application.py",
    "src/framelesswindow/__init__.py",
    "src/framelesswindow/linux/__init__.py",
    "src/framelesswindow/linux/event.py",
    "src/framelesswindow/win/__init__.py",
    "src/framelesswindow/win/c_structures.py",
    "src/framelesswindow/win/effect.py",
    "src/framelesswindow/win/event.py",
    "src/pyobjects/__init__.py",
    "src/pyobjects/example_singleton.py",
    "src/startup.py",
    "src/viewmodels/__init__.py",
    "src/viewmodels/header.py",
]
